[fix] overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ html {
 
 html, body {
   max-width: 100vw !important;
-  overflow-x: hidden !important;
+  overflow-x: hidden;
 }
